# zupplin

./: README.md  docker-compose.yml
.github/: CONTRIBUTING.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: aero_deploy.yml  helium_lint.yml  helium_test.yml  server_lint.yml  server_pyright.yml  server_test.yml
aero/: .gitignore  Cargo.toml  Dioxus.toml  README.md
aero/src/: http.rs  main.rs  state.rs
aero/src/components/: room.rs
aero/src/models/: http.rs  message.rs  mod.rs  room.rs  user.rs  ws.rs
aero/src/utils/: websocket.rs
helium/: .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt  schema.sql
helium/app/: __init__.py  __main__.py  app.py
helium/app/modules/: websocket.py
helium/app/modules/api/: accounts.py  index.py  links.py  login.py  relationships.py  websocket.py
helium/app/modules/api/rooms/: links.py  messages.py  rooms.py
helium/app/modules/api/users/: me.py
helium/app/utils/: database.py  decorators.py  errors.py  handler.py  validate.py
helium/requirements/: requirements-test.txt
helium/tests/: conftest.py  test_account.py  test_relationship.py  test_validate.py
server/: README.md  config.example.toml  pyproject.toml  schema.sql
server/app/: __main__.py  app.py
server/app/modules/: landing.py  links.py  websocket.py
server/app/modules/api/: accounts.py  links.py  login.py  relationships.py  websocket.py
server/app/modules/api/rooms/: links.py  messages.py  rooms.py
server/app/modules/api/users/: me.py
server/app/static/: style.css
server/app/templates/: about.html  base.html  landing.html  link.html
server/app/utils/: database.py  errors.py  handler.py  spec.py  token.py
server/tests/: conftest.py  test_account.py  test_relationship.py
web/: README.md  package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: App.css  App.js  Theme.js  index.css
web/src/components/: Button.js  Home.css  Home.js  Input.css  Input.js
web/src/components/chat/: Chat.css  Chat.js
web/src/components/login/: Login.css  Login.js
web/src/components/sidebar/: Fab.js  Room.js  SideBar.css  SideBar.js  TopBar.js
web/src/lib/: api.ts  constants.ts  websocket.js
workflows/: global_pr_labeler.yml  helium_test.yml
