[package]
name = "aero"
description = "Frontend client for zupplin"
version = "0.1.0"
authors = ["Fyssion <fyssioncodes@gmail.com>"]
edition = "2021"
license = "AGPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# dioxus = { version = "0.2.4", features = ["web", "fermi", "router"] }

# log = "0.4.6"

# # WebAssembly Debug
# wasm-logger = "0.2.0"
# console_error_panic_hook = "0.1.7"
# gloo = "0.8.0"
# reqwest = { version = "0.11.13", features = ["json"] }
# multipart = "0.18.0"
# getrandom = { version = "0.2.8", features = ["js"] }
# serde = { version = "1.0.149", features = ["derive"] }
# serde_json = "1.0"
# im-rc = "15.1.0"
# ws_stream_wasm = "0.7.3"
# async-std = "1.12.0"
# futures = "0.3.25"

[dependencies]
dioxus = { version = "0.3" }

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
gloo = "0.8.0"
reqwest = { version = "0.11.13", features = ["json"] }
multipart = "0.18.0"
getrandom = { version = "0.2.8", features = ["js"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0"
im-rc = "15.1.0"
ws_stream_wasm = "0.7.3"
async-std = "1.12.0"
futures = "0.3.25"
dioxus-web  = "0.3"
dioxus-router = "0.3"
fermi = "0.3"
