[tool.poetry]
name = "server"
version = "0.1.0"
description = "The backend server for Zupplin"
authors = ["Fyssion <fyssioncodes@gmail.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.9"
argon2-cffi = "^20.1.0"
asyncpg = "^0.23.0"
Cerberus = "^1.3.4"
click = "^8.0.1"
itsdangerous = "^2.0.1"
orjson = "^3.6.1"
rich = "^10.6.0"
toml = "^0.10.2"
tornado = "^6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonPlatform = "Linux"
venvPath = "venv"
pythonVersion = "3.9"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
