[tool.poetry]
name = "server"
version = "0.1.0"
description = "The backend server for Zupplin"
authors = ["Fyssion <fyssioncodes@gmail.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
argon2-cffi = "^20.1.0"
asyncpg = "^0.23.0"
Cerberus = "^1.3.4"
click = "^8.0.1"
itsdangerous = "^2.0.1"
orjson = "^3.6.1"
rich = "^10.6.0"
toml = "^0.10.2"
tornado = "^6.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonPlatform = "Linux"
venvPath = "venv"
pythonVersion = "3.9"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 100
